# hydra

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: session-spawn-mode-smoke-test.md
src/: agent.rs  alert.rs  config.rs  fetcher.rs  hook.rs  install.rs  main.rs  state.rs  status.rs  tmux.rs  ui.rs  worktree.rs
