[package]
name = "hydra"
version = "0.1.0"
edition = "2021"
description = "A tmux popup overseer for Claude Code agents"
license = "MIT"
repository = "https://github.com/guimochila/hydra"
readme = "README.md"
keywords = ["tmux", "claude", "tui", "agents", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "hydra"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
crossterm = "0.29"
dirs = "6"
toml = "1"

[profile.release]
strip = true
lto = true
